--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "classnames": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "phoenix": "^1.7.10",
